# mu

./: .gitignore  AGENTS.md  CHALLENGES.md  DOJO.md  HARNESS_ENGINEERING.md  LICENSE  Makefile  PRACTICE.md  README.md  RUNS.md  SUMMARY.md  TODO.md  TOOLS.md  TUNING.md  dojo-failures.md  go.mod  measure.sh  models-catalog.json  ollama_direct.md  practice.sh  problems-catalog.json  pyproject.toml  sit.sh  token_usage.md
.mu/: abl_analyze.py  abl_bo_analyze.py  abl_bo_p3rerun.sh  abl_bo_prereg.md  abl_bo_run.sh  abl_bo_verdict.md  abl_ep_analyze.py  abl_ep_prereg.md  abl_ep_run.sh  abl_msb_analyze.py  abl_msb_prereg.md  abl_msb_run.sh  abl_msb_verdict.md  abl_s2_prereg.md  abl_s2_run.sh  abl_s2_verdict.md  abl_s2b_analyze.py  abl_s2b_prereg.md  abl_s2b_run.sh  abl_scaffold_analyze.py  abl_scaffold_p10_off.json  abl_scaffold_p10_on.json  abl_scaffold_prereg.md  abl_scaffold_run.sh  abl_scaffold_verdict.md  board_L0_3b.json  board_L0_7b.json  board_L0_granite-3.3-8b.json  board_L0_qwen3-8b.json  board_L0_seed-8b.json  round2_scan.md  round3_scan.md  round4_scan.md  round5_scan.md  round6_scan.md  round7_scan.md
docs/: CHALLENGES.md  DOJO.md  DOJO_PYTHON_PORT.md  HARNESS_ENGINEERING.md  KB_BASELINE.md  MODELS.md  MODEL_PROFILE.md  PRACTICE.md  PROBLEM_SPACE.md  REFLEX_KB.md  REFLEX_KB_PLAN.md  RUNS.md  TUNING.md  ablations.md  aima-architecture.md  lsp.md  p1-helloworld.md  p10-dotnet-vue-blog.md  p2-sqlite.md  p3-sdl2.md  p4-fibonacci.md  p5-gin.md  p6-rust.md  p7-flask.md  p8-node-todo.md  p9-vue-todo.md  plan-enrichment-report.md  quantization-and-the-stack.md  token-usage-report.md
dojo/: run.sh
scripts/: HEADER_core.txt  HEADER_javascript.txt  HEADER_python.txt  _extract_reflexes.py  cron.py  improve-loop.py  improve-loop.sh  improve-once.py  install-npu-driver.sh  patch-mistral-template.py  setup-host.sh  setup_openvino.py  sit.py
skills/: skills.go
tests/: test_ablation_rule.py  test_agent_log_distill.py  test_agent_reflex_imports.py  test_aspnet_entrypoint.py  test_board.py  test_build_order.py  test_build_target_inconsistency.py  test_c_forward_declarations.py  test_calibration.py  test_capability.py  test_chat_prompt_shrink.py  test_degeneration.py  (+53 more)
(+659 files in other folders)
