[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mu"
version = "0.7.0"
description = "Local AI coding toolkit"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lmstudio>=1.5",
]

[project.scripts]
mu = "mu.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
